Overflow y hidden fix

--- a/dashboardStyles/adaptiveStyles.css
+++ b/dashboardStyles/adaptiveStyles.css
@@ -2,6 +2,7 @@
     .main {
         flex-direction: column;
         gap: 1%;
+        overflow-y: auto !important;
     }
 
     .statsBox{
