--- a/dashboardStyles/mainStyles.css
+++ b/dashboardStyles/mainStyles.css
@@ -49,7 +49,7 @@ body {
     display: flex;
     justify-content: space-between;
     gap: 90px;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .statsBox {
