--- a/loginStyles/popupStyles.css
+++ b/loginStyles/popupStyles.css
@@ -9,6 +9,7 @@
     bottom: -100%;
     opacity: 0;
     transition: all 0.25s ease;
+    scale: 0;
 }
 
 .popup {
